# tools

./: .gitignore  UX_STABILITY_REVIEW.md
Ai_Diagram_Drawer/: AiDiagramPrd.md  ai-diagram-generator.tsx
bmad-dash/: .gitignore  DELIVERY.md  DELIVERY_ENHANCED.md  DELIVERY_V2.md  IMPLEMENTATION.md  PROJECT_SUMMARY.txt  PR_REVIEW_STATUS.md  README.md  README_ENHANCED.md  analytics.py  bmad_dash.py  bmad_dash_enhanced.py  bmad_dash_v2.py  dashboard.sh  dashboard_screenshot.txt  demo.sh  install.sh  requirements.txt  run.sh  setup.py  vision_parser.py
bmad-dash/docs/: DASHBOARD_ENHANCEMENTS.md  PRODUCT_VISION_FEATURE.md  TREE_VIEW_EXPLANATION.md  VIEWS_DEMO.md
bmad-dash/tests/: test_analytics.py  test_bmad_dash.py  test_vision_parser.py
bmad-dashboard/: BMAD_V6_IMPROVEMENTS.md  CLAUDE.md  README.md  install.sh  test-trigger.sh
bmad-dashboard/apps/: bmad-dashboard.py  launch-dashboard.sh
bmad-dashboard/commands/: bmad-dashboard.md
bmad-dashboard/hooks/: tool-result.sh
bmad-dashboard/tools/: bmad-state-reader.py
claude-manager/: .gitignore  README.md  WARP.md  pyproject.toml
claude-manager/.claude/commands/: speckit.checklist.md  speckit.implement.md
claude-manager/.specify/memory/: constitution.md
claude-manager/.specify/scripts/bash/: create-new-feature.sh  update-agent-context.sh
claude-manager/src/: __init__.py
claude-manager/src/cli/: main.py
claude-manager/src/operations/: copier.py  generator.py  lockfile.py  merger.py  models.py
claude-manager/src/registry/: loader.py  models.py  resolver.py  validator.py
claude-manager/src/selection/: filter.py  models.py  prompter.py
claude-manager/src/validation/: integrity.py  mcp-schema.json  schema.py
diagram-editor/: index.html
markdown-codelens-runner/: README.md  package-lock.json  package.json  tsconfig.json
markdown-codelens-runner/src/: extension.ts  markdownCodeLens.ts
prompt-enhancer-extension/: CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  ROADMAP.md  TEST_REPORT.md  TROUBLESHOOTING.md  background.js  content.js  enhancer.js  generate-icons.js  generate-icons.py  manifest.json  popup.html  popup.js
prompt-enhancer-extension/.serena/: project.yml
scripts/: add-direnv-to-setup.sh  enhanced-multi-git-script.sh  interactive_scanner.sh  trip_download_plus.sh
scripts/cursor/: cursor_chat_cleanup_script.sh
specs/001-claude-seeder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
text_whisperer/: .gitignore  CHANGELOG.md  CLAUDE.md  P1.1_GPU_ACCELERATION_COMPLETE.md  PHASE3_COMPLETION_REPORT.md  PROJECT_THEME_SETUP_GUIDE.md  QUICK_SETUP.md  README.md  V2.1_IMPLEMENTATION_PLAN.md  V2.1_PROGRESS.md  WARP.md  cleanup_project_root.sh  install_theme_script.sh  main.py  migration_script.py  requirements-audio.txt  requirements-base.txt  requirements.txt  setup_guide.md  setup_script.py  voice_transcription.py  voice_transcription_config.json  voice_transcription_manager.sh  voice_transcription_tool.py  voice_transcriptions.db  vt-control.sh
text_whisperer/.claude/: settings.local.json
text_whisperer/TO_BE_DELETED/: MIGRATION_CHECKLIST.md  refactoring_guide.md  voice_transcription_backup.py
text_whisperer/docs/: CLAUDE.md  IMPROVEMENT_PLAN.md  INSTALLATION.md  TROUBLESHOOTING.md
text_whisperer/install/: bash_setup_script.sh  requirements-full.txt  setup.py  (+4 more)
textpilot/: Package.swift  README.md
(+117 files in other folders)
